--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body {
   <div class="header"><h1>About Me</h1></div>
   <p>I was born and raised in Jersey City. A majority of my childhood was spent playing video games and my passion for games led me to learn to code. In my highschool senior year I took my first course in coding, "AP Introduction To Java". Once I graduated I intended to pursue a game design degree. After careful consideration I decided instead that learning computer science would be best suited for my needs and passion. I graduate from NJIT in may of 2023</p>
 </div>
-<div class="altmain">
+<div class="alt">
   <div class="header"><h1>Experience</h1></div>
   <h2>Jersey City's Department of Public Saftey</h2>
   <h3>It Help Desk Technician, August 2022 - Current</h3>
@@ -188,7 +188,7 @@ body {
     <h2>Web banking app</h2>
   </div>  
 </div>
-<div class="altmain">
+<div class="alt">
   <h1>Skills</h1>
   <p>WEBDEV (HTML, PHP, CSS)</p>
   <p>BACKEND (PYTHON, JAVA, C/C++)</p>
