--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ body {
     color:rgb(53, 255, 53);
     background-color:  #202124;
     padding: 20px;
+    font-family: space;
     margin: auto;
 }
 .main p{
@@ -107,13 +108,14 @@ body {
   color:rgb(53, 255, 53);
   background-color:  #414349;
   padding: 20px;
+  font-family: space;
   margin: auto;
 }
 .footer {
   padding: 20px;
   text-align: center;
   color: #ddd;
-  font-family: Exo;
+  font-family:space;
   background: #182136; 
 }
 
