--- a/index.html
+++ b/index.html
@@ -177,18 +177,20 @@ body {
 </div>
 <div class="main">
   <h1>Experience</h1>
-  <div class="flex2-child">
-    <a href="wip.html"><img src="hero-image.webp" height="100px" width="100px"></img></a>
-    <h2>Personal Website</h2>
-  </div>
-  <div class="flex2-child">
-    <a href="wip.html"><img src="wordle.png" height="100px" width="100px"></img></a>
-    <h2>Android Wordle Clone</h2>
-  </div>
-  <div class="flex2-child">
-    <a href="wip.html"><img src="bank.png" height="100px" width="100px"></img></a>
-    <h2>Web banking app</h2>
-  </div>  
+  <div class="flex2-container">
+    <div class="flex2-child">
+      <a href="wip.html"><img src="hero-image.webp" height="100px" width="100px"></img></a>
+      <h2>Personal Website</h2>
+    </div>
+    <div class="flex2-child">
+      <a href="wip.html"><img src="wordle.png" height="100px" width="100px"></img></a>
+      <h2>Android Wordle Clone</h2>
+    </div>
+    <div class="flex2-child">
+      <a href="wip.html"><img src="bank.png" height="100px" width="100px"></img></a>
+      <h2>Web banking app</h2>
+    </div>
+  </div>    
 </div>
 <div class="alt">
   <h1>Skills</h1>
