--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 .flex2-child li{
   justify-content: center;
 }
-.flex2-child img{
-  border-radius: 100px;
-}
+
 
 body {
   /*font-family: Arial, Helvetica, sans-serif;*/
@@ -176,19 +174,19 @@ body {
   <p>I am currently assisting in maintaining network security, diagnosing and solving vital hardware | software issues, and directing/instructing other employees on proper security protcols and procedures.</p>
 </div>
 <div class="main">
-  <h1>Experience</h1>
+  <h1>EXPERIENCE</h1>
   <div class="flex2-container">
     <div class="flex2-child">
       <a href="wip.html"><img src="hero-image.webp" height="100px" width="100px"></img></a>
-      <h2>Personal Website</h2>
+      <h2>PERSONAL WEBSITE</h2>
     </div>
     <div class="flex2-child">
       <a href="wip.html"><img src="wordle.png" height="100px" width="100px"></img></a>
-      <h2>Android Wordle Clone</h2>
+      <h2>ANDRIOD WORDLE CLONE</h2>
     </div>
     <div class="flex2-child">
       <a href="wip.html"><img src="bank.png" height="100px" width="100px"></img></a>
-      <h2>Web banking app</h2>
+      <h2>WEB BANKING APP</h2>
     </div>
   </div>    
 </div>
