--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ body {
   <p>DATABASES (SDK, KOTLIN)</p>
   <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p>
 </div>
-<div class="bg" height="20vh">
+<div class="bg" style="height:20vh;">
   <h2>Contact Me!</h2>
   <br>thotranexe@gmail | tvt4@njit.edu</br>
   <br>201-744-0153</br>
