--- a/index.html
+++ b/index.html
@@ -157,24 +157,24 @@ body {
 </head>
 <body>
 <div class="bg">
-  <button class="contactbtn">Get In Touch</button>
+  <button class="contactbtn">GET IN TOUCH</button>
     <div class="header">
     <h1>&lt;Tho Tran&gt;</h1>
     <p>Software Engineer</p>
     </div>
 </div>
 <div class="main">
-  <div class="header"><h1>About Me</h1></div>
+  <div class="header"><h1>ABOUT ME</h1></div>
   <p>I was born and raised in Jersey City. A majority of my childhood was spent playing video games and my passion for games led me to learn to code. In my highschool senior year I took my first course in coding, "AP Introduction To Java". Once I graduated I intended to pursue a game design degree. After careful consideration I decided instead that learning computer science would be best suited for my needs and passion. I graduate from NJIT in may of 2023</p>
 </div>
 <div class="alt">
-  <div class="header"><h1>Experience</h1></div>
+  <div class="header"><h1>EXPERIENCE</h1></div>
   <h2>Jersey City's Department of Public Saftey</h2>
   <h3>It Help Desk Technician, August 2022 - Current</h3>
   <p>I am currently assisting in maintaining network security, diagnosing and solving vital hardware | software issues, and directing/instructing other employees on proper security protcols and procedures.</p>
 </div>
 <div class="main">
-  <h1>EXPERIENCE</h1>
+  <h1>PROJECTS</h1>
   <div class="flex2-container">
     <div class="flex2-child">
       <a href="wip.html"><img src="hero-image.webp" height="100px" width="100px"></img></a>
