--- a/index.html
+++ b/index.html
@@ -62,13 +62,6 @@ body {
     font-size: 20px;
 }
 
-/* Style the top navigation bar */
-.navbar {
-  font-family: exo;
-  overflow: hidden;
-  display: flex;
-  background: rgb(0,0,0,0.1);
-}
 .contactbtn {
   position: absolute;
   top: 5px;
@@ -86,8 +79,6 @@ body {
   font-family: space;
 }
 
-/* Create two unequal columns that sits next to each other */
-
 .main {   
     -ms-flex: 70%; /* IE10 */
     flex: 70%;
@@ -98,6 +89,21 @@ body {
     margin: auto;
 }
 .main p{
+  font-size: 20px;
+}
+
+.aboutme {   
+    -ms-flex: 70%; /* IE10 */
+    flex: 70%;
+    color:rgb(53, 255, 53);
+    background-color:  #202124;
+    font-family: space;
+    margin: auto;
+}
+.aboutme p{
+  padding-left: 25vh;
+  padding-right: 25vh;
+  text-align: center;
   font-size: 20px;
 }
 .alt{
@@ -163,7 +169,7 @@ body {
     <p>Software Engineer</p>
     </div>
 </div>
-<div class="main">
+<div class="aboutme">
   <div class="header"><h1>ABOUT ME</h1></div>
   <p>I was born and raised in Jersey City. A majority of my childhood was spent playing video games and my passion for games led me to learn to code. In my highschool senior year I took my first course in coding, "AP Introduction To Java". Once I graduated I intended to pursue a game design degree. After careful consideration I decided instead that learning computer science would be best suited for my needs and passion. I graduate from NJIT in may of 2023</p>
 </div>
@@ -198,7 +204,7 @@ body {
   <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p>
 </div>
 <div class="bg" style="height:20vh;">
-  <h2>Contact Me!</h2>
+  <br><h2>Contact Me!</h2><br>
   <br>thotranexe@gmail | tvt4@njit.edu</br>
   <br>201-744-0153</br>
 </div>
