--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@ body {
     background-color:  #202124;
     font-family: space;
     margin: auto;
+    padding: 50px;
 }
 .aboutme p{
-  padding-left: 25vh;
-  padding-right: 25vh;
+  padding-left: 33vh;
+  padding-right: 33vh;
   text-align: center;
   font-size: 20px;
 }
