--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@ body {
     background-color:  #202124;
     font-family: space;
     margin: auto;
-    padding: 50px;
+    padding-top: 20px;
+    padding-bottom: 40px;
 }
 .aboutme p{
   padding-left: 33vh;
@@ -107,15 +108,19 @@ body {
   text-align: center;
   font-size: 20px;
 }
-.alt{
+.exp{
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
   color:rgb(53, 255, 53);
   background-color:  #414349;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  padding-left: 25vh;
+  padding-right: 25vh;
   font-family: space;
   margin: auto;
 }
+
 .footer {
   padding: 20px;
   text-align: center;
