messing around with padding

--- a/index.html
+++ b/index.html
@@ -120,6 +120,20 @@ body {
   font-family: space;
   margin: auto;
 }
+.skills{
+  -ms-flex: 70%; /* IE10 */
+  flex: 70%;
+  color:rgb(53, 255, 53);
+  background-color:  #414349;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  font-family: space;
+  margin: auto;
+}
+.skills p{
+  padding-left: 25vh;
+  padding-right: 25vh;
+}
 
 .footer {
   padding: 20px;
@@ -179,7 +193,7 @@ body {
   <div class="header"><h1>ABOUT ME</h1></div>
   <p>I was born and raised in Jersey City. A majority of my childhood was spent playing video games and my passion for games led me to learn to code. In my highschool senior year I took my first course in coding, "AP Introduction To Java". Once I graduated I intended to pursue a game design degree. After careful consideration I decided instead that learning computer science would be best suited for my needs and passion. I graduate from NJIT in may of 2023</p>
 </div>
-<div class="alt">
+<div class="exp">
   <div class="header"><h1>EXPERIENCE</h1></div>
   <h2>Jersey City's Department of Public Saftey</h2>
   <h3>It Help Desk Technician, August 2022 - Current</h3>
@@ -202,7 +216,7 @@ body {
     </div>
   </div>    
 </div>
-<div class="alt">
+<div class="skills">
   <h1>Skills</h1>
   <p>WEBDEV (HTML, PHP, CSS)</p>
   <p>BACKEND (PYTHON, JAVA, C/C++)</p>
