messing around with padding

--- a/index.html
+++ b/index.html
@@ -129,11 +129,9 @@ body {
   padding-bottom: 40px;
   font-family: space;
   margin: auto;
+  text-align: center;
 }
-.skills p{
-  padding-left: 25vh;
-  padding-right: 25vh;
-}
+
 
 .footer {
   padding: 20px;
@@ -218,10 +216,12 @@ body {
 </div>
 <div class="skills">
   <h1>Skills</h1>
-  <p>WEBDEV (HTML, PHP, CSS)</p>
-  <p>BACKEND (PYTHON, JAVA, C/C++)</p>
-  <p>DATABASES (SDK, KOTLIN)</p>
-  <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p>
+  <div style="display: inline-block; text-align: center;">
+    <p>WEBDEV (HTML, PHP, CSS)</p>
+    <p>BACKEND (PYTHON, JAVA, C/C++)</p>
+    <p>DATABASES (SDK, KOTLIN)</p>
+    <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p>
+  </div>
 </div>
 <div class="bg" style="height:20vh;">
   <br><h2>Contact Me!</h2><br>
