messing around with padding

--- a/index.html
+++ b/index.html
@@ -216,11 +216,13 @@ body {
 </div>
 <div class="skills">
   <h1>Skills</h1>
-  <div style="display: inline-block; text-align: center;">
-    <p>WEBDEV (HTML, PHP, CSS)</p>
-    <p>BACKEND (PYTHON, JAVA, C/C++)</p>
-    <p>DATABASES (SDK, KOTLIN)</p>
-    <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p>
+  <div style="text-align: center;">
+    <div style="display: inline-block; text-align: center;">
+      <p>WEBDEV (HTML, PHP, CSS)</p>
+      <p>BACKEND (PYTHON, JAVA, C/C++)</p>
+      <p>DATABASES (SDK, KOTLIN)</p>
+      <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p>
+    </div>
   </div>
 </div>
 <div class="bg" style="height:20vh;">
