messing around with padding

--- a/index.html
+++ b/index.html
@@ -131,14 +131,17 @@ body {
   margin: auto;
   text-align: center;
 }
-
+.skills p{
+  display: inline-block; 
+  text-align: center;
+}
 
 .footer {
+  display: inline-block;
   padding: 20px;
   text-align: center;
   color: #ddd;
   font-family:space;
-  background: #182136; 
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@@ -216,19 +219,17 @@ body {
 </div>
 <div class="skills">
   <h1>Skills</h1>
-  <div style="text-align: center;">
-    <div style="display: inline-block; text-align: center;">
-      <p>WEBDEV (HTML, PHP, CSS)</p>
-      <p>BACKEND (PYTHON, JAVA, C/C++)</p>
-      <p>DATABASES (SDK, KOTLIN)</p>
-      <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p>
-    </div>
-  </div>
+    <p>WEBDEV (HTML, PHP, CSS)</p>
+    <p>BACKEND (PYTHON, JAVA, C/C++)</p>
+    <p>DATABASES (SDK, KOTLIN)</p>
+    <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p>
 </div>
 <div class="bg" style="height:20vh;">
-  <br><h2>Contact Me!</h2><br>
-  <br>thotranexe@gmail | tvt4@njit.edu</br>
-  <br>201-744-0153</br>
+  <div class="footer">
+    <br><h2>Contact Me!</h2><br>
+    <br>thotranexe@gmail | tvt4@njit.edu</br>
+    <br>201-744-0153</br>
+  </div>
 </div>
 
 </body>
