--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
   justify-content: center;
 }
 
-
 body {
   /*font-family: Arial, Helvetica, sans-serif;*/
   margin: 0;
@@ -138,7 +137,6 @@ body {
 
 .footer {
   display: inline-block;
-  padding: 20px;
   text-align: center;
   color: #ddd;
   font-family:space;
@@ -219,16 +217,16 @@ body {
 </div>
 <div class="skills">
   <h1>Skills</h1>
-    <p>WEBDEV (HTML, PHP, CSS)</p>
-    <p>BACKEND (PYTHON, JAVA, C/C++)</p>
-    <p>DATABASES (SDK, KOTLIN)</p>
-    <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p>
+    <p>WEBDEV (HTML, PHP, CSS)</p><br>
+    <p>BACKEND (PYTHON, JAVA, C/C++)</p><br>
+    <p>DATABASES (SDK, KOTLIN)</p><br>
+    <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p><br>
 </div>
-<div class="bg" style="height:20vh;">
+<div class="bg" style="height:25vh;">
   <div class="footer">
-    <br><h2>Contact Me!</h2><br>
-    <br>thotranexe@gmail | tvt4@njit.edu</br>
-    <br>201-744-0153</br>
+    <br><h2>Contact Me!</h2>
+    <br>thotranexe@gmail | tvt4@njit.edu
+    <br>201-744-0153
   </div>
 </div>
 
