messing around with padding

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ body {
   text-align: center;
 }
 .skills p{
-  display: inline-block; 
-  text-align: center;
+  width: 50%;
+  margin: auto;
 }
 
 .footer {
