messing around with padding

--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@ body {
   <h1>Skills</h1>
     <p>WEBDEV (HTML, PHP, CSS)</p><br>
     <p>BACKEND (PYTHON, JAVA, C/C++)</p><br>
-    <p>DATABASES (SDK, KOTLIN)</p><br>
+    <p>DATABASES (SQL, NOSQL)</p><br>
+    <p>MOBILE (SDK, KOTLIN)</p><br>
     <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p><br>
 </div>
 <div class="bg" style="height:25vh;">
