--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@ body {
   <button class="contactbtn">GET IN TOUCH</button>
     <div class="header">
     <h1>&lt;Tho Tran&gt;</h1>
-    <p>Software Engineer</p>
+        <div class="container">
+          <span class="box"><p> Software Engineer</p></span>
+        </div>
     </div>
 </div>
 <div class="aboutme">
