--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@ body {
 .main p{
   font-size: 20px;
 }
-
+.main h1{
+  border: solid rgb(53, 255, 53);
+  margin: 4px 2px;
+  border-radius: 20px;
+}
 .aboutme {   
     -ms-flex: 70%; /* IE10 */
     flex: 70%;
@@ -220,7 +224,7 @@ body {
   </div>    
 </div>
 <div class="skills">
-  <h1>Skills</h1>
+  <h1>SKILLS</h1>
     <p>WEBDEV (HTML, PHP, CSS)</p><br>
     <p>BACKEND (PYTHON, JAVA, C/C++)</p><br>
     <p>DATABASES (SQL, NOSQL)</p><br>
