--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ body {
   border: solid rgb(53, 255, 53);
   margin: 4px 2px;
   border-radius: 20px;
+  display: inline;
 }
 .aboutme {   
     -ms-flex: 70%; /* IE10 */
