--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@ body {
 }
 .main h1{
   border: solid rgb(53, 255, 53);
-  margin: 4px 2px;
+  margin: 4px 4px;
   border-radius: 20px;
   display: inline;
+  text-align: center;
 }
 .aboutme {   
     -ms-flex: 70%; /* IE10 */
