--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@ body {
 }
 .main h1{
   border: solid rgb(53, 255, 53);
-  margin: 4px 4px;
   border-radius: 20px;
+  margin: auto;
+  width: fit-content;
+
   display: inline;
   text-align: center;
 }
