--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ body {
   border-radius: 20px;
   margin: auto;
   width: fit-content;
-  display: inline;
+  display: flex;
   text-align: center;
 }
 .aboutme {   
