--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ body {
 .main h1{
   border: solid rgb(53, 255, 53);
   border-radius: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin: auto;
+  width: fit-content;
   display: flex;
   text-align: center;
 }
