--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@ body {
     flex: 70%;
     color:rgb(53, 255, 53);
     background-color:  #202124;
-    padding: 20px;
+    padding-top: 20px;
+    padding-bottom: 40px;
     font-family: space;
     margin: auto;
 }
