--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body {
   font-size: 20px;
 }
 .main h1{
-  border: solid rgb(53, 255, 53);
+  border: 4px solid rgb(53, 255, 53);
   border-radius: 20px;
   margin: auto;
   width: fit-content;
