--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@ body {
 .main h1{
   border: 4px solid rgb(53, 255, 53);
   border-radius: 20px;
+  padding-left: 2px;
+  padding-right: 2px;
   margin: auto;
   width: fit-content;
   display: flex;
