--- a/index.html
+++ b/index.html
@@ -118,6 +118,16 @@ body {
   text-align: center;
   font-size: 20px;
 }
+.aboutme h1{
+  border: 3px solid rgb(53, 255, 53);
+  border-radius: 30px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: auto;
+  width: fit-content;
+  display: flex;
+  text-align: center;
+}
 .exp{
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
@@ -129,6 +139,16 @@ body {
   padding-right: 25vh;
   font-family: space;
   margin: auto;
+}
+.exp h1{
+  border: 3px solid rgb(53, 255, 53);
+  border-radius: 30px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: auto;
+  width: fit-content;
+  display: flex;
+  text-align: center;
 }
 .skills{
   -ms-flex: 70%; /* IE10 */
@@ -146,6 +166,16 @@ body {
   width: 50%;
   margin: auto;
   text-align: left;
+}
+.skills h1{
+  border: 3px solid rgb(53, 255, 53);
+  border-radius: 30px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: auto;
+  width: fit-content;
+  display: flex;
+  text-align: center;
 }
 
 .footer {
