--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@ body {
     </div>
 </div>
 <div class="aboutme">
-  <div class="header"><h1>ABOUT ME</h1></div>
+  <h1>ABOUT ME</h1>
   <p>I was born and raised in Jersey City. A majority of my childhood was spent playing video games and my passion for games led me to learn to code. In my highschool senior year I took my first course in coding, "AP Introduction To Java". Once I graduated I intended to pursue a game design degree. After careful consideration I decided instead that learning computer science would be best suited for my needs and passion. I graduate from NJIT in may of 2023</p>
 </div>
 <div class="exp">
-  <div class="header"><h1>EXPERIENCE</h1></div>
+  <h1>EXPERIENCE</h1>
   <h2>Jersey City's Department of Public Saftey</h2>
   <h3>It Help Desk Technician, August 2022 - Current</h3>
   <p>I am currently assisting in maintaining network security, diagnosing and solving vital hardware | software issues, and directing/instructing other employees on proper security protcols and procedures.</p>
