--- a/index.html
+++ b/index.html
@@ -163,7 +163,6 @@ body {
 }
 .skills p{
   padding-left:10%;
-  padding-top: 20px;
   width: 50%;
   margin: auto;
   text-align: left;
@@ -174,6 +173,7 @@ body {
   padding-left: 5px;
   padding-right: 5px;
   margin: auto;
+  margin-bottom: 20px;
   width: fit-content;
   display: flex;
   text-align: center;
