--- a/index.html
+++ b/index.html
@@ -78,7 +78,36 @@ body {
   border-radius: 16px;
   font-family: space;
 }
-
+.resumebtn{
+  position: absolute;
+  top: 5px;
+  left: 2px;
+  background-color:transparent;
+  color: rgb(53, 255, 53);
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+  font-family: space;
+}
+.projectsbtn{
+  position: absolute;
+  top: 5px;
+  left: 15px;
+  background-color:transparent;
+  color: rgb(53, 255, 53);
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+  font-family: space;
+}
 .main {   
     -ms-flex: 70%; /* IE10 */
     flex: 70%;
@@ -226,6 +255,8 @@ body {
 </head>
 <body>
 <div class="bg">
+  <button class="resumebtn"> RESUME</button>
+  <button class="projectsbtn">PROJECTS</button>
   <button class="contactbtn">GET IN TOUCH</button>
     <div class="header">
     <h1>&lt;Tho Tran&gt;</h1>
