--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@ body {
 <body>
 <div class="bg">
   <div class="btncontainer">
-    <button class="resumebtn"> RESUME</button>
-    <button class="projectsbtn">PROJECTS</button>
+    <a class="resumebtn"> RESUME</a>
+    <a class="projectsbtn">PROJECTS</a>
   </div>
   <button class="contactbtn">GET IN TOUCH</button>
     <div class="header">
