--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@ body {
   font-family: space;
 }
 .projectsbtn{
-  position: absolute;
-  top: 5px;
-  left: 35px;
+  position: relative;
+  margin-left: 2px;
   background-color:transparent;
   color: rgb(53, 255, 53);
   padding: 10px 20px;
