--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ body {
   font-family: space;
 }
 .resumebtn{
-  position: absolute;
-  top: 5px;
-  left: 2px;
+  position: relative;
+  margin-left: 2px;
+  margin-right: 2px;
   background-color:transparent;
   color: rgb(53, 255, 53);
   padding: 10px 20px;
