--- a/index.html
+++ b/index.html
@@ -205,41 +205,15 @@ body {
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 925px) {
-  .flex-container {   
-    flex-direction: column;
-    align-items: center;
-    flex-shrink: 0;
+@media screen and (max-width: 700px) {
+  .aboutme{
+    padding-left: 10vh;
+    padding-right: 10vh;
+    text-align: justify;
   }
-  .flex-child{
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-  .flex-child:first-child{
-    margin-left: auto;
-    margin-right: auto;
-  }
-  /*.flex2-container {
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 20px;
-    display: inline-block;
-    text-align: center;
-    flex-shrink: 0;
-  }
-  .flex2-child{
-    margin-right: 5vh;
-  }*/
 }
 
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .navbar a {
-    float: none;
-    width: 100%;
-  }
-}
+
 </style>
 </head>
 <body>
