--- a/index.html
+++ b/index.html
@@ -206,10 +206,13 @@ body {
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
-  .aboutme{
+  .aboutme p{
     padding-left: 10vh;
     padding-right: 10vh;
     text-align: justify;
+  }
+  .aboutme h1{
+    text-align: left;
   }
 }
 
