staring mobile friendly conversions

--- a/index.html
+++ b/index.html
@@ -207,11 +207,12 @@ body {
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
   .aboutme p{
-    padding-left: 10vh;
-    padding-right: 10vh;
-    text-align: justify;
+    padding-left: 5vh;
+    padding-right: 5vh;
+    text-align: left;
   }
   .aboutme h1{
+    margin: 0,20,0,20;
     text-align: left;
   }
 }
