--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ body {
     padding-bottom: 40px;
 }
 .aboutme p{
-  padding-left: 33vh;
-  padding-right: 33vh;
+  padding-left: 33vw;
+  padding-right: 33vw;
   text-align: center;
   font-size: 20px;
 }
