staring mobile friendly conversions

--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@ body {
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
   .aboutme p{
-    padding-left: 5vh;
-    padding-right: 5vh;
+    padding-left: 5vw;
+    padding-right: 5vw;
     text-align: left;
   }
   .aboutme h1{
     margin:0;
-    margin-left: 5vh;
+    margin-left: 5vw;
     text-align: left;
   }
 }
