staring mobile friendly conversions

--- a/index.html
+++ b/index.html
@@ -216,6 +216,25 @@ body {
     margin-left: 5vw;
     text-align: left;
   }
+  .exp h1{
+    margin:0;
+    margin-left: 5vw;
+    text-align: left;
+  }
+  .main h1{
+    margin:0;
+    margin-left: 5vw;
+    text-align: left;
+  }
+  .skills h1{
+    margin:0;
+    margin-left: 5vw;
+    text-align: left;
+  }
+  .skills p{
+    margin: 0;
+    margin-left: 5vw;
+  }
 }
 
 
