staring mobile friendly conversions

--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@ body {
     margin-left: 5vw;
     text-align: left;
   }
+  .exp{
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
   .exp h1{
     margin:0;
     margin-left: 5vw;
