staring mobile friendly conversions

--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@ body {
     margin-left: 5vw;
     text-align: left;
   }
+  .flex2-child{
+    margin-left: 25px;
+    margin-right: 25px;
+  }
   .skills h1{
     margin:0;
     margin-left: 5vw;
