staring mobile friendly conversions

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ body {
 .footer {
   display: inline-block;
   text-align: center;
-  color: #ddd;
+  color:solid rgb(53, 255, 53);
   font-family:space;
 }
 
