--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@ body {
   text-align: center;
   color:solid rgb(53, 255, 53);
   font-family:space;
+  padding: 20px;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
