--- a/index.html
+++ b/index.html
@@ -299,9 +299,9 @@ body {
 </div>
 <div class="bg" style="height:25vh;">
   <div class="footer">
-    <br><h2>Contact Me!</h2>
-    <br>thotranexe@gmail | tvt4@njit.edu
-    <br>201-744-0153
+    <h2>Contact Me!</h2>
+    <p>thotranexe@gmail | tvt4@njit.edu<p>
+    <p>201-744-0153<p>
   </div>
 </div>
 
