--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@ body {
     margin-right: 25px;
   }
   .skills h1{
+    padding-bottom:20px ;
+    padding-top: 40px;
     margin:0;
     margin-left: 5vw;
     text-align: left;
@@ -242,7 +244,8 @@ body {
   .skills p{
     margin: 0;
     margin-right: auto;
-    padding-left: 5vw;
+    text-align: left;
+    margin-left: 5vw;
   }
 }
 
