--- a/index.html
+++ b/index.html
@@ -235,9 +235,8 @@ body {
     margin-right: 25px;
   }
   .skills h1{
-    padding-bottom:20px ;
-    padding-top: 40px;
     margin:0;
+    margin-bottom: 40px;
     margin-left: 5vw;
     text-align: left;
   }
