--- a/index.html
+++ b/index.html
@@ -242,9 +242,8 @@ body {
   }
   .skills p{
     margin: 0;
-    margin-right: auto;
     text-align: left;
-    margin-left: 5vw;
+    padding-left: 5vw;
   }
 }
 
