--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@ body {
     text-align: left;
   }
   .flex2-child{
-    margin-left: 25px;
-    margin-right: 25px;
+    margin-left: 5vw;
   }
   .skills h1{
     margin:0;
