staring mobile friendly conversions

--- a/index.html
+++ b/index.html
@@ -233,6 +233,13 @@ body {
   .flex2-child{
     margin-left: 2.5vw;
   }
+  .flex2-child h2{
+    font-size: 25px;
+  }
+  .flex2-child img{
+    height:75px ;
+    width:75px ;
+  }
   .skills h1{
     margin:0;
     margin-bottom: 40px;
