staring mobile friendly conversions

--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@ body {
 <body>
 <div class="bg">
   <div class="btncontainer">
-    <a class="resumebtn"> RESUME</a>
-    <a class="projectsbtn">PROJECTS</a>
+    <a class="resumebtn" href="ThoTranResume.pdf"> RESUME</a>
+    <a class="projectsbtn" href="projects.html">PROJECTS</a>
   </div>
   <button class="contactbtn">GET IN TOUCH</button>
     <div class="header">
