staring mobile friendly conversions

--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@ body {
 <div class="exp">
   <h1>EXPERIENCE</h1>
   <h2>Jersey City's Department of Public Saftey</h2>
-  <h3>It Help Desk Technician, August 2022 - Current</h3>
+  <h3>It Help Desk Technician</h3>
+  <h5>August 2022 - Current</h5>
   <p>I am currently assisting in maintaining network security, diagnosing and solving vital hardware | software issues, and directing/instructing other employees on proper security protcols and procedures.</p>
 </div>
 <div class="main">
