all buttons functional?

--- a/index.html
+++ b/index.html
@@ -201,7 +201,6 @@ body {
 }
 
 .footer {
-  text-transform: uppercase;
   display: inline-block;
   text-align: center;
   color:solid rgb(53, 255, 53);
@@ -268,7 +267,7 @@ body {
     <a class="resumebtn" href="ThoTranResume.pdf"> RESUME</a>
     <a class="projectsbtn" href="projects.html">PROJECTS</a>
   </div>
-  <button class="contactbtn">GET IN TOUCH</button>
+  <a href="#id"><button class="contactbtn">GET IN TOUCH</button><a>
     <div class="header">
     <h1>&lt;Tho Tran&gt;</h1>
         <div class="container">
@@ -291,15 +290,15 @@ body {
   <h1>PROJECTS</h1>
   <div class="flex2-container">
     <div class="flex2-child">
-      <a href="wip.html"><img src="hero-image.webp" height="100px" width="100px"></img></a>
+      <a href="https://github.com/thotranexe/pweb"><img src="pwebicon.png" height="100px" width="100px"></img></a>
       <h2>PERSONAL WEBSITE</h2>
     </div>
     <div class="flex2-child">
-      <a href="wip.html"><img src="wordle.png" height="100px" width="100px"></img></a>
-      <h2>ANDRIOD WORDLE CLONE</h2>
+      <a href="wip.html"><img src="2040689.png" height="100px" width="100px"></img></a>
+      <h2>MOVIE THEATER APP</h2>
     </div>
     <div class="flex2-child">
-      <a href="wip.html"><img src="bank.png" height="100px" width="100px"></img></a>
+      <a href="https://github.com/thotranexe/it202-008-bank-webapp"><img src="bank.png" height="100px" width="100px"></img></a>
       <h2>WEB BANKING APP</h2>
     </div>
   </div>    
@@ -313,7 +312,7 @@ body {
     <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p><br>
 </div>
 <div class="bg" style="height:25vh;">
-  <div class="footer">
+  <div id="bottom" class="footer">
     <h2>Contact Me!</h2>
     <p>thotranexe@gmail | tvt4@njit.edu<p>
     <p>201-744-0153<p>
