--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
         flex: 100%;
         color:whitesmoke;
         background-color: rgb(33, 33, 33);
-        font-family: alegreya;
+        font-family: exo;
         padding: 20px;
     }
     .main h1{
