all buttons functional?

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ body {
     <a class="resumebtn" href="ThoTranResume.pdf"> RESUME</a>
     <a class="projectsbtn" href="projects.html">PROJECTS</a>
   </div>
-  <a href="#id"><button class="contactbtn">GET IN TOUCH</button><a>
+  <a href="#bottom"><button class="contactbtn">GET IN TOUCH</button><a>
     <div class="header">
     <h1>&lt;Tho Tran&gt;</h1>
         <div class="container">
