all buttons functional?

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ body {
     <p>MOBILE (SDK, KOTLIN)</p><br>
     <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p><br>
 </div>
-<div class="bg" style="height:25vh;">
+<div class="bg" style="height:25vh; margin:0;">
   <div id="bottom" class="footer">
     <h2>Contact Me!</h2>
     <p>thotranexe@gmail | tvt4@njit.edu<p>
