all buttons functional?

--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@ body {
   text-align: center;
   color:solid rgb(53, 255, 53);
   font-family:space;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom:0;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
