all buttons functional?

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ body {
       <h2>PERSONAL WEBSITE</h2>
     </div>
     <div class="flex2-child">
-      <a href="wip.html"><img src="2040689.png" height="100px" width="100px"></img></a>
+      <a href="wip.html"><img src="2040698.png" height="100px" width="100px"></img></a>
       <h2>MOVIE THEATER APP</h2>
     </div>
     <div class="flex2-child">
@@ -311,7 +311,7 @@ body {
     <p>MOBILE (SDK, KOTLIN)</p><br>
     <p>OPERATING SYSTEMS (LINUX, UNIX [MACOS], WINDOWS)</p><br>
 </div>
-<div class="bg" style="height:25vh; margin:0;">
+<div class="bg" style="height:25vh; margin-bottom:0;">
   <div id="bottom" class="footer">
     <h2>Contact Me!</h2>
     <p>thotranexe@gmail | tvt4@njit.edu<p>
