all buttons functional?

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ body {
       <h2>PERSONAL WEBSITE</h2>
     </div>
     <div class="flex2-child">
-      <a href="wip.html"><img src="2040698.png" height="100px" width="100px"></img></a>
+      <a href="https://github.com/thotranexe/flixster"><img src="2040698.png" height="100px" width="100px"></img></a>
       <h2>MOVIE THEATER APP</h2>
     </div>
     <div class="flex2-child">
