--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,7 @@
         padding: 20px 20px;
         font-size: 20px;
         text-decoration: none;
+        font-family: exo;
     }
     .footer {
         padding: 20px;
