project page update

--- a/projects.html
+++ b/projects.html
@@ -21,35 +21,35 @@
         margin-left: 50px;
     }
     body {
-        font-family: exo;
+        font-family: space;
         margin: 0;
     }
     .main {
         margin: 0;   
         -ms-flex: 100; /* IE10 */
         flex: 100%;
-        color:whitesmoke;
+        color:rgb(53, 255, 53);
         background-color: rgb(33, 33, 33);
-        font-family: exo;
+        font-family: space;
         padding: 20px;
     }
     .main h1{
-        font-family: exo;
+        font-family: space;
         text-align: center;
         font-size: 40px;
     }
     .main h2{
-        font-family: exo;
+        font-family: space;
         text-align: center;
         font-size: 30px;
     }
     .main p{
         display: block;
-        color: white;
+        color: rgb(53, 255, 53);
         padding: 20px 20px;
         font-size: 20px;
         text-decoration: none;
-        font-family: exo;
+        font-family: space;
     }
     .footer {
         padding: 20px;
@@ -58,7 +58,7 @@
     }
     .footer a{
         display: block;
-        color: whitesmoke;
+        color: rgb(53, 255, 53);
         padding: 20px 20px;
         font-size: 20px;
         text-decoration: none;
